Service.yml
apiVersion: apps/v1
kind: Service
metadata:
  name: nginxsvc
  labels:
    app: nginxhttps
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  selector:
    app: nginxhttps
