Ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: nginxhttpsvcnew
  labels:
    app: nginxhttps
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  selector:
    app: nginxhttps
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: nginxhttpsvcnew
spec:
 tls:
   - secretName: nginx-certs-keys
     hosts: 192.168.99.100 
 rules:
   - host: 192.168.99.100
     http:
        paths:
          - backend:
               serviceName: nginx
               servicePort: 80
